se agregó pagina admin, se editó cart

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             
             <ul >
                 <li>
-                    <a href="./pages/shop.html"class="list-shop">SHOP</a></li>
+                    <a href="./pages/tienda/shop.html"class="list-shop">SHOP</a></li>
                 <li>
-                    <a href="./pages/contact.html"class="list-contacto">CONTACTO</a></li>
+                    <a href="./pages/admin/register.html"class="list-contacto">CONTACTO</a></li>
                 <li>
-                    <a href="./pages/login.html"class="list-login">LOGIN</a></li>
+                    <a href="./pages/tienda/login.html"class="list-login">LOGIN</a></li>
                 <li>
-                    <a href="./pages/cart.html"class="list-carrito">CARRITO
+                    <a href="./pages/tienda/cart.html"class="list-carrito">CARRITO
                         <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
                     </a>
                 </li>
@@ -34,7 +34,7 @@
         <article>
             <h3>Nuevos Ingresos</h3>
             <p> Descubrí el próximo Funko Pop de tu colección</p>
-            <a href="./pages/shop.html">SHOP</a>
+            <a href="./pages/tienda/shop.html">SHOP</a>
         </article>
     </section><!--fin banner-->
     <section><!--inicio primera seccion-->
@@ -42,7 +42,7 @@
             <h3>Star Wars &
                 The Mandalorian </h3>
             <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
         </ARTICLE>
         <picture>
             <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
@@ -52,7 +52,7 @@
         <ARTICLE>
             <h3>POKEMON INDIGO</h3>
             <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
         </ARTICLE>
         <picture>
             <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
@@ -62,7 +62,7 @@
         <ARTICLE>
             <h3>HARRY POTTER </h3>
             <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
         </ARTICLE>
         <picture>
             <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
@@ -123,10 +123,10 @@
         <nav class="piePagina">
             <ul>
                 <li><img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com"></li>
-                <a href="./pages/shop.html">SHOP</a>
-                <li><a href="./pages/registrar.html">REGISTRARSE</a></li>
-                <li><a href="./pages/login.html">LOGIN</a></li>
-                <li><a href="./pages/contact.html">CONTACTO</a></li>
+                <a href="./pages/tienda/shop.html">SHOP</a>
+                <li><a href="./pages/admin/register.html">REGISTRARSE</a></li>
+                <li><a href="./pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="./pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
     </footer><!--fin footer seccion -->
