--- a/pages/tienda/item.html
+++ b/pages/tienda/item.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
-
+    <header ><!--inicio header-->
+        <nav >
+            <picture >
+                <a href="../../index.html" ><img src="./img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop" ></a>
+            </picture>
+            
+            <ul >
+                <li>
+                    <a href="./pages/tienda/shop.html"class="list-shop">SHOP</a></li>
+                <li>
+                    <a href="./pages/admin/register.html"class="list-contacto">CONTACTO</a></li>
+                <li>
+                    <a href="./pages/tienda/login.html"class="list-login">LOGIN</a></li>
+                <li>
+                    <a href="./pages/tienda/cart.html"class="list-carrito">CARRITO
+                        <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header><!--fin header-->
 <body>
     <section>
         <picture>
