--- a/pages/tienda/cart.html
+++ b/pages/tienda/cart.html
@@ -10,7 +10,7 @@
 <header ><!--inicio header-->
         <nav >
             <picture >
-                <a href="../index.html" ><img src="../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop" ></a>
+                <a href="../../index.html" ><img src="../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop" ></a>
                 
             </picture>
             
@@ -20,7 +20,7 @@
                 <li>
                     <a href="./contact.html"class="list-contacto">CONTACTO</a></li>
                 <li>
-                    <a href="./login.html"class="list-login">LOGIN</a></li>
+                    <a href="../admin/login.html"class="list-login">LOGIN</a></li>
                 <li>
                     <a href="./cart.html"class="list-carrito">CARRITO
                         <img src="../img/icons/cart-icon.svg" alt="icono de carrito">
@@ -30,6 +30,39 @@
         </nav>
 </header><!--fin header-->
 <main>
+    <span>
+        <span class="carrito-header">
+            <h2>CARRITO DE COMPRAS</h2>
+        </span>
+        <div >
+            <ul class="carrito-detalles">
+                <li>DETALLE PRODUCTO</li>
+                <li>CANTIDAD</li> 
+                <li>TOTAL</li>
+            </ul>
+        </div>
+        <div>
+            <span>
+                <h3>BABY YODA BLUEBALL</h3>
+                <h4>STAR WARS</h4>
+                <p>precio: $1799,99</p>
+            </span>
+            <span>
+                <input type="number" />
+                <input type="button" value="+" />
+                <input type="button" value="-" />
+            </span>
+            <span>
+                <p>$3599,98</p>
+            </span>
+            <span>
+                <img src="../../img/icons/delete_trash.svg" alt="icono de borrar">
+            </span>
+        </div>
+    </span>
+
+
+
     <span class="carrito">
         <span class="carrito-header">
             <h2>RESUMEN</h2>
