se editaron paginas admin e item

--- a/pages/tienda/item.html
+++ b/pages/tienda/item.html
@@ -30,7 +30,7 @@
 <body>
     <section>
         <picture>
-            <img src="./img/colections/star_wars/grogu.img" alt="Figura Funko Pop Grogu - The Mandalorian" />
+            <img src="../img/colections/star_wars/grogu.img" alt="Figura Funko Pop Grogu - The Mandalorian" />
         </picture>
         <section>
             <h4>STAR WARS</h4>
