--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -25,13 +25,102 @@
             <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
         </tr>
         <tr>
-            <td>1</td>
+            <td>2</td>
             <td>STW001002</td>
             <td>Boba Fett Fighter</td>
             <td>STAR WARS</td>
             <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
             <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
         </tr>
+        <tr>
+            <td>3</td>
+            <td>STW001003</td>
+            <td>Luke Skywalker & Grogu</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>STW001004</td>
+            <td>Stormtrooper Lightsaber</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>PKM001001</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>PKM001002</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>PKM001003</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>PKM001004</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>PKM001005</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>HPT001001</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>HPT001002</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>HPT001003</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>HPT001004</td>
+            <td>Boba Fett Fighter</td>
+            <td>STAR WARS</td>
+            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+        </tr>
+
     </table>
         
     </span>
