--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -1,129 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <header><!--inicio header-->
+        <nav>
+            <picture>
+                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
+                        alt="Isologotipo de la marca funkoshop"></a>
+            </picture>
+
+            <ul>
+                <li>
+                    <a href="../../pages/tienda/shop.html" class="list-shop">SHOP</a>
+                </li>
+                <li>
+                    <a href="../../pages/admin/register.html" class="list-contacto">CONTACTO</a>
+                </li>
+                <li>
+                    <a href="../../pages/tienda/login.html" class="list-login">LOGIN</a>
+                </li>
+                <li>
+                    <a href="../../pages/tienda/cart.html" class="list-carrito">CARRITO
+                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header><!--fin header-->
 
     <span>
-        <img src="../../img/icons/search_icon.svg" alt="icono de búsqueda"><input type="text" name="search" placeholder="código, nombre, categoría">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Código</th>
-            <th>Nombre del Producto</th>
-            <th>Categoría</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>STW001001</td>
-            <td>Baby Yoda Blueball</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>STW001002</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>STW001003</td>
-            <td>Luke Skywalker & Grogu</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>STW001004</td>
-            <td>Stormtrooper Lightsaber</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>PKM001001</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>PKM001002</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>PKM001003</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>8</td>
-            <td>PKM001004</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>9</td>
-            <td>PKM001005</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>10</td>
-            <td>HPT001001</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>11</td>
-            <td>HPT001002</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>HPT001003</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
-        <tr>
-            <td>13</td>
-            <td>HPT001004</td>
-            <td>Boba Fett Fighter</td>
-            <td>STAR WARS</td>
-            <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
-            <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
-        </tr>
+        <img src="../../img/icons/search_icon.svg" alt="icono de búsqueda"><input type="text" name="search"
+            placeholder="código, nombre, categoría">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Código</th>
+                <th>Nombre del Producto</th>
+                <th>Categoría</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>STW001001</td>
+                <td>Baby Yoda Blueball</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>STW001002</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>STW001003</td>
+                <td>Luke Skywalker & Grogu</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>STW001004</td>
+                <td>Stormtrooper Lightsaber</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>PKM001001</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>PKM001002</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>PKM001003</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>PKM001004</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>PKM001005</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>HPT001001</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>HPT001002</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>HPT001003</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>HPT001004</td>
+                <td>Boba Fett Fighter</td>
+                <td>STAR WARS</td>
+                <td><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></td>
+                <td><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+            </tr>
 
-    </table>
-        
+        </table>
+
     </span>
+    <footer><!--inicio footer seccion -->
+        <nav class="piePagina">
+            <ul>
+                <li><img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com"></li>
+                <a href="../../pages/tienda/shop.html">SHOP</a>
+                <li><a href="../../pages/admin/register.html">REGISTRARSE</a></li>
+                <li><a href="../../pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </footer><!--fin footer seccion -->
 
 </body>
+
 </html>
