se modifico el texto del shop para html sin ningun formato

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <li><a href="./pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
+        <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 </body>
 </html>
