se actualizó la oregeta pagina item completa en formato html

--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home / fuskoshop    </title>
+    <title>Home / fuskoshop </title>
     <link rel="stylesheet" href="./css/index.css">
 
 </head>
+
 <body>
-    <header ><!--inicio header-->
-        <nav >
-            <picture >
-                <a href="./index.html" ><img src="./img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop" ></a>
+    <header><!--inicio header-->
+        <nav>
+            <picture>
+                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
+                        alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-            
-            <ul >
+
+            <ul>
                 <li>
-                    <a href="./pages/tienda/shop.html"class="list-shop">SHOP</a></li>
+                    <a href="./pages/tienda/shop.html" class="list-shop">SHOP</a>
+                </li>
                 <li>
-                    <a href="./pages/admin/register.html"class="list-contacto">CONTACTO</a></li>
+                    <a href="./pages/admin/register.html" class="list-contacto">CONTACTO</a>
+                </li>
                 <li>
-                    <a href="./pages/tienda/login.html"class="list-login">LOGIN</a></li>
+                    <a href="./pages/tienda/login.html" class="list-login">LOGIN</a>
+                </li>
                 <li>
-                    <a href="./pages/tienda/cart.html"class="list-carrito">CARRITO
+                    <a href="./pages/tienda/cart.html" class="list-carrito">CARRITO
                         <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
                     </a>
                 </li>
             </ul>
         </nav>
     </header><!--fin header-->
-    <main class= "container">
+
     <section><!--inicio banner-->
         <article>
             <h3>Nuevos Ingresos</h3>
@@ -37,56 +43,57 @@
             <a href="./pages/tienda/shop.html">SHOP</a>
         </article>
     </section><!--fin banner-->
-    <section><!--inicio primera seccion-->
-        <ARTICLE>
-            <h3>Star Wars &
-                The Mandalorian </h3>
-            <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
-            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
-        </ARTICLE>
-        <picture>
-            <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
-        </picture>
-    </section><!--fin primera seccion-->
-    <section><!--inicio segunda seccion-->
-        <ARTICLE>
-            <h3>POKEMON INDIGO</h3>
-            <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
-        </ARTICLE>
-        <picture>
-            <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
-        </picture>
-    </section><!--fin segunda seccion-->
-    <section><!--inicio tercera seccion-->
-        <ARTICLE>
-            <h3>HARRY POTTER </h3>
-            <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
-            <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
-        </ARTICLE>
-        <picture>
-            <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
-        </picture>
-    </section><!--fin tercera seccion-->
-    <section>
-        <!--inicio cuarta seccion -->
-        <h2>Últimos lanzamientos</h2>
-        <ul>
-            <div>
-                <!--inicio cuarta seccion primer articulo-->
-                <a href="">
-                    <div>
-                        <img src="./img/star-wars/trooper-1.webp" alt="figura coleccionable star Wars">
+    <main class="container"> <!-- inicio cuerpo principal -->
+             <ARTICLE>
+                <h3>Star Wars &
+                    The Mandalorian </h3>
+                <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
+                <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
+            </ARTICLE>
+            <picture>
+                <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
+            </picture>
+        </section><!--fin primera seccion-->
+        <section><!--inicio segunda seccion-->
+            <ARTICLE>
+                <h3>POKEMON INDIGO</h3>
+                <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
+                <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
+            </ARTICLE>
+            <picture>
+                <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
+            </picture>
+        </section><!--fin segunda seccion-->
+        <section><!--inicio tercera seccion-->
+            <ARTICLE>
+                <h3>HARRY POTTER </h3>
+                <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
+                <a href="./pages/tienda/shop.html">VER COLECCIÓN</a>
+            </ARTICLE>
+            <picture>
+                <img src="./img/harry-potter/snape-patronus-1.webp"
+                    alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
+            </picture>
+        </section><!--fin tercera seccion-->
+        <section>
+            <!--inicio cuarta seccion -->
+            <h2>Últimos lanzamientos</h2>
+            <ul>
+                <div>
+                    <!--inicio cuarta seccion primer articulo-->
+                    <a href="">
+                        <div>
+                            <img src="./img/star-wars/trooper-1.webp" alt="figura coleccionable star Wars">
                             <p>STAR WARS</p>
                             <h4>STORMTROOPER LIGHTSABER</h4>
                             <p>$ 1799,99</p>
                             <p>3 CUOTAS SIN INTERÉS</p>
-                            </div>
-                        </a>
-            </div>
+                        </div>
+                    </a>
+                </div>
                 <!--fin cuarta seccion primer articulo-->
-            <div>
-            <!--inicio cuarta seccion segundo articulo-->
+                <div>
+                    <!--inicio cuarta seccion segundo articulo-->
                     <a href="">
                         <picture>
                             <img src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable pidgeotto de pokemon">
@@ -98,10 +105,10 @@
                             <p>3 CUOTAS SIN INTERÉS</p>
                         </div>
                     </a>
-            <!--fin cuarta seccion segundo articulo-->
-            </div>
-            <div>
-                <!--inicio cuarta seccion tercer articulo-->
+                    <!--fin cuarta seccion segundo articulo-->
+                </div>
+                <div>
+                    <!--inicio cuarta seccion tercer articulo-->
                     <a href="">
                         <picture>
                             <img src="./img/harry-potter/luna-1.webp" alt="figura coleccionable luna de harry POTTER">
@@ -113,10 +120,10 @@
                             <p>3 CUOTAS SIN INTERÉS</p>
                         </div>
                     </a>
-            <!--fin cuarta seccion tercer articulo-->
-            </div>
-        </ul>
-    </section>
+                    <!--fin cuarta seccion tercer articulo-->
+                </div>
+            </ul>
+        </section>
 
     </main>
     <footer><!--inicio footer seccion -->
@@ -132,4 +139,5 @@
         <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 </body>
+
 </html>
