se realizo la pagina create y se modificaron los headers de admin y create

--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../css/index.css">
 </head>
 
 <body>
@@ -17,19 +18,15 @@
 
             <ul>
                 <li>
-                    <a href="../../pages/tienda/shop.html" class="list-shop">SHOP</a>
+                    <a href="../../index.html" class="list-HOME">VER TIENDA</a>
                 </li>
                 <li>
-                    <a href="../../pages/admin/register.html" class="list-contacto">CONTACTO</a>
+                    <a href="../admin/admin.html" class="list-admin">ADMIN</a>
                 </li>
                 <li>
-                    <a href="../../pages/tienda/login.html" class="list-login">LOGIN</a>
+                    <a href="../../index.html" class="list-login">SALIR</a>
                 </li>
-                <li>
-                    <a href="../../pages/tienda/cart.html" class="list-carrito">CARRITO
-                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a>
-                </li>
+                
             </ul>
         </nav>
     </header><!--fin header-->
