se creo el login

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </article>
     </section><!--fin banner-->
     <main class="container"> <!-- inicio cuerpo principal -->
+        <section>
              <ARTICLE>
                 <h3>Star Wars &
                     The Mandalorian </h3>
