--- a/pages/admin/edit.html
+++ b/pages/admin/edit.html
@@ -31,92 +31,92 @@
         </nav>
     </header><!--fin header-->
     <main><!--inicio cuerpo principal-->
-        <section>
-            <section> <!--Inicio de primera fila-->
-                <span class="create-header">
-                    <h2>EDITAR ITEM</h2>
-                </span>
-            </section><!--fin de la primera fila-->
-            <section><!--inicio de la segunda fila-->
-                <div>
-                    <form action="#">
-                        <label for="categoria">Categoría:</label>
-                        <select id="categoria" name="categoria">
 
-                            <option value="#">Figuras</option>
-                            <option value="#">seleccionar</option>
-                            <option value="#">seleccionar</option>
-                        </select>
-                    </form>
-                </div>
-                <div>
-                    <form action="#">
-                        <label for="Licencia">Licencia:</label>
-                        <select id="Licencia" name="Licencia">
+        <section> <!--Inicio de primera fila-->
+            <span class="edit-header">
+                <h2>EDITAR ITEM</h2>
+            </span>
+        </section><!--fin de la primera fila-->
+        <section><!--inicio de la segunda fila-->
+            <div>
+                <form action="#">
+                    <label for="categoria">Categoría:</label>
+                    <select id="categoria" name="categoria">
 
-                            <option value="#">Naruto Shippuden</option>
-                            <option value="#">seleccionar</option>
-                            <option value="#">seleccionar</option>
-                        </select>
-                    </form>
-                </div>
-            </section><!--fin de la segunda fila-->
-            <section><!--inicio de la tercera fila-->
-                <form action="#">
-                    <label for="nombre del producto">Nombre del producto:</label>
-                    <input type="text" name="producto" value="Kakashi Hatake Shippuden Saga">
-                </form>
-            </section><!--fin de la tercera fila-->
-            <section><!--inicio de la cuarta fila-->
-                <textarea name="comentario" rows="10"
-                    cols="40">Figura Funko coleccionable de Kakashi Hatake de la saga Naruto Shipudden invocando chidori.  </textarea>
-            </section><!--fin de la cuarta fila-->
-            <section><!--inicio de la quinto fila-->
-                <form action="#">
-                    <label for="sku">SKU:</label>
-                    <input type="text" name="sku" value="NAR001012">
-                    <label for="precio">Precio:</label>
-                    <input type="text" name="precio" value="$ 1.799,00">
-                    <label for="stock:">Stock:</label>
-                    <input type="text" name="stock:" value="10">
-                </form>
-            </section><!--fin de la quinto fila-->
-            <section><!--inicio de la sexta fila-->
-                <form action="#">
-                    <label for="descuento">Descuento:</label>
-                    <input type="text" name="descuento" value="10%">
-                    <label for="cuotas">Cuotas:</label>
-                    <select id="cuotas" name="Licencia">
-
-                        <option value="#">6 Cuotas sin interés</option>
+                        <option value="#">Figuras</option>
                         <option value="#">seleccionar</option>
                         <option value="#">seleccionar</option>
                     </select>
                 </form>
-            </section><!--fin de la sexta fila-->
-            <section><!--inicio de la septimo fila-->
+            </div>
+            <div>
                 <form action="#">
-                    <label for="imagen">Imágenes:</label>
-                    <input type="file" id="imagen" name="imagen" multiple>
-                </form>
-                <section>
-                    <article>
-                        <img src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura.png"
-                            alt="Figura de funkos de naruko de frente">
-                        <p>Frente</p>
-                    </article>
-                    <article>
-                        <img src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura-box.jpg"
-                            alt="Figura de funkos de naruko de dorso">
-                        <p>Dorso</p>
-                    </article>
-                </section>
-            </section><!--fin de la septimo fila-->
-            <section><!--inicio de la octavo fila-->
-                <input type="submit" value="Modificar Producto">
+                    <label for="Licencia">Licencia:</label>
+                    <select id="Licencia" name="Licencia">
 
-            </section><!--fin de la octavo fila-->
-        </section>
+                        <option value="#">Naruto Shippuden</option>
+                        <option value="#">seleccionar</option>
+                        <option value="#">seleccionar</option>
+                    </select>
+                </form>
+            </div>
+        </section><!--fin de la segunda fila-->
+        <section><!--inicio de la tercera fila-->
+            <form action="#">
+                <label for="nombre del producto">Nombre del producto:</label>
+                <input type="text" name="producto" value="Kakashi Hatake Shippuden Saga">
+            </form>
+        </section><!--fin de la tercera fila-->
+        <section><!--inicio de la cuarta fila-->
+            <textarea name="comentario" rows="10"
+                cols="40">Figura Funko coleccionable de Kakashi Hatake de la saga Naruto Shipudden invocando chidori.  </textarea>
+        </section><!--fin de la cuarta fila-->
+        <section><!--inicio de la quinto fila-->
+            <form action="#">
+                <label for="sku">SKU:</label>
+                <input type="text" name="sku" value="NAR001012">
+                <label for="precio">Precio:</label>
+                <input type="text" name="precio" value="$ 1.799,00">
+                <label for="stock:">Stock:</label>
+                <input type="text" name="stock:" value="10">
+            </form>
+        </section><!--fin de la quinto fila-->
+        <section><!--inicio de la sexta fila-->
+            <form action="#">
+                <label for="descuento">Descuento:</label>
+                <input type="text" name="descuento" value="10%">
+                <label for="cuotas">Cuotas:</label>
+                <select id="cuotas" name="Licencia">
+
+                    <option value="#">6 Cuotas sin interés</option>
+                    <option value="#">seleccionar</option>
+                    <option value="#">seleccionar</option>
+                </select>
+            </form>
+        </section><!--fin de la sexta fila-->
+        <section><!--inicio de la septimo fila-->
+            <form action="#">
+                <label for="imagen">Imágenes:</label>
+                <input type="file" id="imagen" name="imagen" multiple>
+            </form>
+            <section>
+                <article>
+                    <img src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura.png"
+                        alt="Figura de funkos de naruko de frente">
+                    <p>Frente</p>
+                </article>
+                <article>
+                    <img src="../../img/naruko/Naruto-Shippuden-Young-konoha-aldea-figura-box.jpg"
+                        alt="Figura de funkos de naruko de dorso">
+                    <p>Dorso</p>
+                </article>
+            </section>
+        </section><!--fin de la septimo fila-->
+        <section><!--inicio de la octavo fila-->
+            <input type="submit" value="Modificar Producto">
+
+        </section><!--fin de la octavo fila-->
+
     </main><!--fin cuerpo principal-->
 
     <footer><!--inicio footer seccion -->
