se confeccionó la pagina register

--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>create</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../../css/index.css">
 </head>
 
@@ -63,6 +63,7 @@
             <a href="#">
                 <p>Olvidé mi contraseña</p>
             </a>
+            <button><a href="./register.html">Registrate</a></button>
         </section><!--fin de la quinto fila-->
 
 
