se le dio formato al header en css en todas las oregentas de la tienda

--- a/pages/tienda/cart.html
+++ b/pages/tienda/cart.html
@@ -9,29 +9,29 @@
 </head>
 
 <body>
-    <header><!--inicio header-->
-        <nav>
-            <picture>
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
+    <header ><!--inicio header-->
+        <nav class="container" id="container-header">
+            <picture class="grid-item1">
+                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
 
-            <ul>
-                <li>
-                    <a href="../../pages/shop.html" class="list-shop">SHOP </a>
-                </li>
-                <li>
-                    <a href="../../pages/contact.html" class="list-contacto">CONTACTO </a>
-                </li>
-                <li>
-                    <a href="../../pages/login.html" class="list-login">LOGIN </a>
-                </li>
-                <li>
-                    <a href="../../pages/cart.html" class="list-carrito">
-                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a>
-                </li>
-            </ul>
+           <div class="grid-item2">
+            <a href="./pages/tienda/shop.html">SHOP</a>
+           </div>
+            <div class="grid-item3">
+                <a href="./pages/admin/register.html" >CONTACTO</a>
+            </div>     
+            <div  class="grid-item4">
+
+                <a href="./pages/tienda/login.html">LOGIN</a>
+                
+            </div>
+            <div class="grid-item5">
+                <a href="./pages/tienda/cart.html">
+                    <img src="./img/icons/cart-icon.svg" alt="icono de carrito"> </a> 
+            </div>  
+          
         </nav>
     </header><!--fin header-->
     <main>
