se actualizo header y footer de la tienda y el admin

--- a/pages/admin/register.html
+++ b/pages/admin/register.html
@@ -10,23 +10,17 @@
 
 <body>
     <header><!--inicio header-->
-        <nav>
-            <picture>
+        <nav class="container">
+            <picture class="grid-item1">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-
             <ul>
-                <li>
-                    <a href="../../index.html" class="list-HOME">VER TIENDA</a>
-                </li>
-                <li>
-                    <a href="../admin/admin.html" class="list-admin">ADMIN</a>
-                </li>
-                <li>
-                    <a href="../../index.html" class="list-login">SALIR</a>
-                </li>
 
+                <li><a href="../../index.html" class="list-HOME">VER TIENDA</a></li>
+                <li> <a href="./admin.html" class="list-admin">ADMIN</a></li>
+                <li> <a href="../../index.html" class="list-login">SALIR</a></li>
+             
             </ul>
         </nav>
     </header><!--fin header-->
@@ -94,15 +88,16 @@
     </main><!--fin cuerpo principal-->
 
     <footer><!--inicio footer seccion -->
-        <nav class="piePagina">
+        <nav class="container">
+            <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com"></li>
-                <a href="../../pages/tienda/shop.html">SHOP</a>
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
                 <li><a href="../../pages/admin/register.html">REGISTRARSE</a></li>
-                <li><a href="../../pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="../../pages/admin/login.html">INGRESAR</a></li>
                 <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
+        <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 
 </body>
