--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -4,29 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="../../css/index.css">
 </head>
 
 <body>
     <header><!--inicio header-->
-        <nav>
-            <picture>
+        <nav class="container">
+            <picture class="grid-item1">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-
             <ul>
-                <li>
-                    <a href="../../index.html" class="list-HOME">VER TIENDA</a>
-                </li>
-                <li>
-                    <a href="../admin/admin.html" class="list-admin">ADMIN</a>
-                </li>
-                <li>
-                    <a href="../../index.html" class="list-login">SALIR</a>
-                </li>
-                
+
+                <li><a href="../../index.html" class="list-HOME">VER TIENDA</a></li>
+                <li> <a href="./admin.html" class="list-admin">ADMIN</a></li>
+                <li> <a href="../../index.html" class="list-login">SALIR</a></li>
+             
             </ul>
         </nav>
     </header><!--fin header-->
@@ -150,15 +144,16 @@
 
     </span>
     <footer><!--inicio footer seccion -->
-        <nav class="piePagina">
+        <nav class="container">
+            <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com"></li>
-                <a href="../../pages/tienda/shop.html">SHOP</a>
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
                 <li><a href="../../pages/admin/register.html">REGISTRARSE</a></li>
-                <li><a href="../../pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="../../pages/admin/login.html">INGRESAR</a></li>
                 <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
+        <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
 
 </body>
