--- a/pages/tienda/cart.html
+++ b/pages/tienda/cart.html
@@ -9,29 +9,19 @@
 </head>
 
 <body>
-    <header ><!--inicio header-->
-        <nav class="container" id="container-header">
+    <header><!--inicio header-->
+        <nav class="container">
             <picture class="grid-item1">
-                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
+                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
+            <ul>
 
-           <div class="grid-item2">
-            <a href="./pages/tienda/shop.html">SHOP</a>
-           </div>
-            <div class="grid-item3">
-                <a href="./pages/admin/register.html" >CONTACTO</a>
-            </div>     
-            <div  class="grid-item4">
-
-                <a href="./pages/tienda/login.html">LOGIN</a>
-                
-            </div>
-            <div class="grid-item5">
-                <a href="./pages/tienda/cart.html">
-                    <img src="./img/icons/cart-icon.svg" alt="icono de carrito"> </a> 
-            </div>  
-          
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li> <a href="../../pages/admin/register.html">CONTACTO</a></li>
+                <li> <a href="../../pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="../../pages/tienda/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"> </a> </li>
+            </ul>
         </nav>
     </header><!--fin header-->
     <main>
@@ -122,16 +112,13 @@
     </main>
 
     <footer><!--inicio footer seccion -->
-        <nav class="piePagina">
+        <nav class="container">
+            <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="../../pages/shop.html">SHOP</a></li>
-                <li><a href="../../pages/registrar.html">REGISTRARSE</a></li>
-                <li><a href="../../pages/login.html">LOGIN</a></li>
-                <li><a href="../../pages/contact.html">CONTACTO</a></li>
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="../../pages/tienda/login.html">INGRESAR</a></li>
+                <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
-            <picture>
-                <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
-            </picture>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
