--- a/pages/tienda/item.html
+++ b/pages/tienda/item.html
@@ -9,27 +9,17 @@
 </head>
 <body>
     <header><!--inicio header-->
-        <nav>
-            <picture>
+        <nav class="container">
+            <picture class="grid-item1">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-
             <ul>
-                <li>
-                    <a href="../../pages/shop.html" class="list-shop">SHOP </a>
-                </li>
-                <li>
-                    <a href="../../pages/contact.html" class="list-contacto">CONTACTO </a>
-                </li>
-                <li>
-                    <a href="../../pages/login.html" class="list-login">LOGIN </a>
-                </li>
-                <li>
-                    <a href="../../pages/cart.html" class="list-carrito">
-                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a>
-                </li>
+
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li> <a href="../../pages/admin/register.html">CONTACTO</a></li>
+                <li> <a href="../../pages/tienda/login.html">LOGIN</a></li>
+                <li><a href="../../pages/tienda/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"> </a> </li>
             </ul>
         </nav>
     </header><!--fin header-->
@@ -130,16 +120,13 @@
     </main>
    
     <footer><!--inicio footer seccion -->
-        <nav class="piePagina">
+        <nav class="container">
+            <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
-                <li><a href="../../pages/shop.html">SHOP</a></li>
-                <li><a href="../../pages/registrar.html">REGISTRARSE</a></li>
-                <li><a href="../../pages/login.html">LOGIN</a></li>
-                <li><a href="../../pages/contact.html">CONTACTO</a></li>
+                <li><a href="../../pages/tienda/shop.html">SHOP</a></li>
+                <li><a href="../../pages/tienda/login.html">INGRESAR</a></li>
+                <li><a href="../../pages/tienda/contact.html">CONTACTO</a></li>
             </ul>
-            <picture>
-                <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
-            </picture>
         </nav>
         <p>All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
