--- a/pages/tienda/shop.html
+++ b/pages/tienda/shop.html
@@ -11,7 +11,7 @@
 <body>
     <header><!--inicio header-->
         <nav class="container">
-            <picture class="grid-item1">
+            <picture>
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
