shop casi terminado, falta estilo form

--- a/index.html
+++ b/index.html
@@ -104,17 +104,15 @@
                         </div>
                     </a>    
                 </li>  <!--fin cuarta seccion segundo articulo-->
-                <li> <!--inicio cuarta seccion tercer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4>LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
-                </li>  <!--fin cuarta seccion tercer articulo-->
+                <a href="">
+                    <div>
+                        <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
+                        <p id="primer-tex">HARRY POTTER</p>
+                        <h4>LUNA LOVEGOOD LION MASK</h4>
+                        <p id="segundo-tex">$ 1799,99</p>
+                        <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
+                    </div>
+                </a>     <!--fin cuarta seccion tercer articulo-->
             </ul>
         </section>
 
